FluidHandler tests